tests/parser/errors/multi_var_decl.rv
var a, b, c = 1, 2, 3, 4
var a, b, c = 1, 2
